# MachineLearningPractice

./: CMakeLists.txt  MachineLearning.kdev4
include/: RTHelper.h
src/: .RTHelper.cpp.kate-swp  RTHelper.cpp  main.cpp
